# Courses

./: .gitignore
.firecrawl/: libsnark-learning.json  libsnark-tutorial.json
AUT1400/HW/AP1400-2-HW1/: CMakeLists.txt
AUT1400/HW/AP1400-2-HW1/include/: hw1.h
AUT1400/HW/AP1400-2-HW1/src/: hw1.cpp  unit_test.cpp
RareSkills-zkbook/: 有限域上的椭圆曲线.md  用于ZK的算术电路.md
ZKP-MOOC/: CLAUDE.md
ZKP-MOOC/.claude/: settings.local.json
ZKP-MOOC/Lecture 3 Memory Safety  CS 110L, spring 2021 (Safety in Systems Programming)-zh-CN/: 01-analysis.md  02-prompt.md  03-draft.md  04-critique.md
ZKP-MOOC/Notes/: Lecture2.md  Lecture4.md  Lecture8-FRI.md
easy-langent-by-hxd/: .env  ch02.ipynb
easy-langent-by-hxd/code/: ch01.ipynb  ch02.ipynb  ch03.ipynb  learning_method_examples.json
hello-agents-by-hxd/ch01/: FirstAgent.ipynb  ch01.ipynb  test.py
hello-agents-by-hxd/ch02/: ELIZA.py
hello-agents-by-hxd/ch03/: BPE.py
machine-learning-by-hxd/Ch03-DecisionTree/: DecisionTree.ipynb  treeCreater.py
动手学深度学习/pytorch/: setup.py
动手学深度学习/pytorch/d2l.egg-info/: PKG-INFO  (+1 more)
深度学习入门-基于Python的理论与实现/Chapter2/: and_gate.py  nand_gate.py  or_gate.py
深度学习入门-基于Python的理论与实现/Chapter3/: mnist_show.py  neuralnet_mnist.py  neuralnet_mnist_batch.py  sigmoid.py  softmax.py  step_function.py
深度学习入门-基于Python的理论与实现/Chapter4/: grad_simplenet.py  gradient_methord.py  grandient_1d.py  grandient_2d.py  two_layer_net.py
深度学习入门-基于Python的理论与实现/Chapter5/: but_apple.py  buy_apple_orange.py  gradient_check.py  layer_naive.py  train_neuralnet.py  two_layer_net.py
深度学习入门-基于Python的理论与实现/common/: optimizer.py
(+46 files in other folders)
